add DependencyUtils debug output

--- a/YoutubeDownloader.UI/App.axaml
+++ b/YoutubeDownloader.UI/App.axaml
@@ -1,6 +1,7 @@
 <Application xmlns="https://github.com/avaloniaui"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              x:Class="YoutubeDownloader.UI.App"
+             Name="YouTube Downloader"
              RequestedThemeVariant="Dark">
              <!-- "Default" ThemeVariant follows system theme variant. "Dark" or "Light" are other available options. -->
 
