--- a/YoutubeDownloader.UI/Views/MainWindow.axaml
+++ b/YoutubeDownloader.UI/Views/MainWindow.axaml
@@ -6,7 +6,7 @@
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
         x:Class="YoutubeDownloader.UI.Views.MainWindow"
         x:DataType="vm:MainWindowViewModel"
-        Title="YouTube Downloader"
+        Title="{Binding WindowTitle}"
         TransparencyLevelHint="AcrylicBlur"
         Background="Transparent"
         WindowStartupLocation="Manual"
@@ -88,6 +88,7 @@
                         IsEnabled="{Binding !IsDownloading}"
                         HorizontalAlignment="Stretch"
                         HorizontalContentAlignment="Center"
+                        VerticalContentAlignment="Center"
                         Height="40"
                         Background="#CCFF0000"
                         Foreground="White"
@@ -115,10 +116,10 @@
                     BorderThickness="1"
                     Padding="10">
                 <ScrollViewer>
-                    <TextBlock Text="{Binding LogOutput}" 
-                               FontFamily="Consolas, monospace"
-                               Foreground="#AAAAAA"
-                               TextWrapping="Wrap"/>
+                    <SelectableTextBlock Text="{Binding LogOutput}" 
+                                         FontFamily="Consolas, monospace"
+                                         Foreground="#AAAAAA"
+                                         TextWrapping="Wrap"/>
                 </ScrollViewer>
             </Border>
             
